--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,8 @@ footer a, footer a:visited {
     font-size: 9em;
     font-weight: bold;
 }
+.alert-error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
