--- a/css/style.css
+++ b/css/style.css
@@ -184,3 +184,7 @@ footer a, footer a:visited {
     background-color: #f8d7da;
     border-color: #f5c6cb;
 }
+.bio-image > img{
+    width: 300px;
+    height: 300px;
+}
